--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lib": "src"
   },
   "scripts": {
+    "lint": "eslint . --ignore-path .gitignore",
+    "pretest": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rimraf lib",
     "build": "babel src --out-dir lib",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "eslint": "^2.10.2",
     "rimraf": "^2.5.2"
   }
 }
