--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lib": "src"
   },
   "scripts": {
-    "lint": "eslint . --ignore-path .gitignore",
+    "lint:js": "eslint . --ignore-path .gitignore",
+    "lint:md": "remark . --quiet --frail",
+    "lint": "run-p lint:*",
     "pretest": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "rimraf lib",
@@ -43,6 +45,9 @@
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.10.2",
+    "npm-run-all": "^2.1.1",
+    "remark": "^4.2.2",
+    "remark-lint": "^3.2.1",
     "rimraf": "^2.5.2"
   }
 }
