--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:md": "remark . --quiet --frail",
     "lint": "run-p lint:*",
     "pretest": "npm run lint",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "tape": "nyc --all tape 'tests/**/*.test.js'",
+    "test": "npm run tape",
     "prebuild": "rimraf lib",
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build"
@@ -46,8 +47,16 @@
     "babel-preset-es2015": "^6.9.0",
     "eslint": "^2.10.2",
     "npm-run-all": "^2.1.1",
+    "nyc": "^6.4.4",
     "remark": "^4.2.2",
     "remark-lint": "^3.2.1",
-    "rimraf": "^2.5.2"
+    "rimraf": "^2.5.2",
+    "tape": "^4.5.1"
+  },
+  "nyc": {
+    "include": "src",
+    "require": [
+      "babel-register"
+    ]
   }
 }
