--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pretest": "npm run lint",
     "tape": "nyc --all tape 'tests/**/*.test.js'",
     "test": "npm run tape",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "prebuild": "rimraf lib",
     "build": "babel src --out-dir lib",
     "prepublish": "npm run build"
@@ -45,6 +46,7 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "coveralls": "^2.11.9",
     "eslint": "^2.10.2",
     "npm-run-all": "^2.1.1",
     "nyc": "^6.4.4",
