Remove eslint parser babel-eslint
eslint can parse ES6 without a plugin, therefore babel-eslint is not
necessary.
See: https://github.com/babel/babel-eslint#note-you-dont-need-to-use-babel-eslint-if-you-are-only-using-es6es2015-eslint-actually-supports-es6es7-jsx-and-object-restspread-by-default-now

However, the parser option sourceType: module needs to be added to be
able to use ES6 import and export features.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,6 +1,7 @@
-# Use babel to parse ES6
-# http://eslint.org/docs/user-guide/configuring#specifying-parser
-parser: babel-eslint
+# Use ES6 import and export
+# http://eslint.org/docs/user-guide/configuring#specifying-parser-options
+parserOptions:
+  sourceType: module
 
 # Define global variables for the following environments
 # http://eslint.org/docs/user-guide/configuring#specifying-environments
