--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.9.0",
     "coveralls": "^2.11.9",
     "eslint": "^2.10.2",
     "npm-run-all": "^2.1.1",
