--- a/package.json
+++ b/package.json
@@ -8,16 +8,15 @@
     "lib": "src"
   },
   "scripts": {
-    "watch": "npm-watch",
+    "watch": "jest --watch",
     "lint:js": "eslint . --ignore-path .gitignore",
     "lint:md": "remark . --quiet --frail",
     "lint": "run-p lint:*",
     "pretest": "npm run lint",
-    "tape": "nyc --all tape 'tests/**/*.test.js'",
-    "test": "npm run tape",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test": "jest --coverage",
+    "coverage": "cat ./coverage/lcov.info | coveralls",
     "prebuild": "rimraf lib",
-    "build": "babel src --out-dir lib",
+    "build": "babel src --out-dir lib --ignore *.test.js",
     "prepublish": "npm run build"
   },
   "babel": {
@@ -46,28 +45,21 @@
   "homepage": "https://github.com/PhilippBaschke/convert-to-stylelint#readme",
   "devDependencies": {
     "babel-cli": "^6.9.0",
+    "babel-jest": "^18.0.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.9.0",
     "coveralls": "^2.11.9",
     "eslint": "^2.10.2",
+    "jest": "^18.0.0",
     "npm-run-all": "^2.1.1",
-    "npm-watch": "^0.1.4",
-    "nyc": "^6.4.4",
     "remark": "^4.2.2",
     "remark-lint": "^3.2.1",
-    "rimraf": "^2.5.2",
-    "tape": "^4.5.1"
+    "rimraf": "^2.5.2"
   },
-  "nyc": {
-    "include": "src",
-    "require": [
-      "babel-register"
+  "jest": {
+    "collectCoverageFrom": "src/**/*.js",
+    "coveragePathIgnorePatterns": [
+      "/node_modules",
+      "/lib/"
     ]
-  },
-  "watch": {
-    "tape": {
-      "patterns": ["src", "tests"],
-      "quiet": "true"
-    }
   }
 }
