--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "babel-jest": "^18.0.0",
     "babel-preset-es2015": "^6.9.0",
     "coveralls": "^2.11.9",
-    "eslint": "^2.10.2",
+    "eslint": "^3.12.2",
     "jest": "^18.0.0",
-    "npm-run-all": "^2.1.1",
-    "remark": "^4.2.2",
-    "remark-lint": "^3.2.1",
+    "npm-run-all": "^3.1.2",
+    "remark-cli": "^2.1.0",
+    "remark-lint": "^5.4.0",
     "rimraf": "^2.5.2"
   },
   "jest": {
