--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      ["env", {
+        "targets": {
+          "node": "current"
+        }
+      }]
     ]
   },
   "repository": {
@@ -49,7 +53,7 @@
   "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-jest": "^18.0.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.1.4",
     "coveralls": "^2.11.9",
     "eslint": "^3.12.2",
     "jest": "^18.0.0",
