:art: Improve quote-props eslint configuration
It is easier to type when quotes only have to be added when they are required.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -172,7 +172,7 @@ rules:
   operator-assignment: error
   operator-linebreak: error
   padded-blocks: [error, never]
-  quote-props: error
+  quote-props: [error, consistent-as-needed]
   quotes: [error, single, {avoidEscape: true, allowTemplateLiterals: true}]
   require-jsdoc: warn
   semi: [error, never]
