:art: Improve indentation of package.json

--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "babel": {
     "presets": [
-      ["env", {
-        "targets": {
-          "node": "current"
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
         }
-      }]
+      ]
     ]
   },
   "repository": {
