:sparkles: Create a very basic CLI that can be passed an old config
I used the commander package because it makes parsing command line options very
easy and descriptive.

I created a separate bin file to make testing of the CLI easier (can import the
cli and call the included function).

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Automatically convert linter configurations to a stylelint configuration.",
   "main": "lib/index.js",
+  "bin": "bin/convert-to-stylelint.js",
   "engines": {
     "node": ">=4"
   },
@@ -71,5 +72,8 @@
       "/node_modules",
       "/lib/"
     ]
+  },
+  "dependencies": {
+    "commander": "^2.9.0"
   }
 }
